# code/Logic/Shared/DTOs/IconUploadDto.cs
@@ -1,0 +1,14 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+using System.Threading.Tasks;
+
+namespace SharedPublic.DTOs
+{
+    public class IconUploadDto
+    {
+        public string? IconName { get; set; }
+        public string? IconData { get; set; }
+    }
+}
